proj1/tests/correct/indentation.py
x = True
y = False

if x:
  print x
  if y:
    print y
