proj1/tests/error/if_scope.py
if True:
    x = 12
print x
